--- a/.gitignore
+++ b/.gitignore
@@ -3,20 +3,20 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode
 
 ### VisualStudioCode ###
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-*.code-workspace
+**/.vscode/*
+**/!.vscode/settings.json
+**/!.vscode/tasks.json
+**/!.vscode/launch.json
+**/!.vscode/extensions.json
+**/*.code-workspace
 
 ### VisualStudioCode Patch ###
 # Ignore all local history of files
-.history
-.ionide
+**/.history
+**/.ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode
 
 # Verilog
-*.out
-*.vcd
+**/*.out
+**/*.vcd
